--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.13.0",
+    "jsdom": "^26.1.0",
     "puppeteer": "^24.15.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.13.0"
   }
 }
