--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "express": "^5.1.0",
     "jsdom": "^26.1.0",
     "puppeteer": "^24.15.0"
   },
